fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     font-family: 'Noto Sans', sans-serif;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     /* background-color: #cff0f02f; */
+    overflow-x: hidden;
 }
 
 body p {
@@ -131,6 +132,7 @@ CSS for the splash screen
     justify-content: center;
     align-items: center;
     z-index: 9999;
+    overflow: hidden;
   }
   
   .loading-bar {
@@ -165,7 +167,7 @@ CSS for the splash screen
     font-size: 24px;
     color: #333;
   }
-   
+
   
 /* ::-webkit-scrollbar {
     width: 10px;
